--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1482,7 +1482,7 @@ textures:
             'MX:MX-1char': [174, 626, 36, 48]
             'MX:MX-2char': [124, 626, 48, 48]
             'MX:MX-3char': [64, 626, 54, 48]
-            'MX:MX-4char': [0, 626, 62, 48]
+            'MX:MX-4char': [-2, 626, 62, 48]
             'MX:MX-5char': [898, 572, 68, 48]
             'NL:S-1char': [762, 416, 42, 42]
             'NL:S-2char': [710, 416, 46, 40]
@@ -1610,7 +1610,7 @@ textures:
             'ZA:ZA-4char': [686, 364, 62, 42]
             'ZA:ZA-5char': [608, 364, 72, 42]
             'ru:national-1char': [848, 572, 42, 36]
-            'UK:M-1char': [848, 572, 42, 36]
+            'GB-1char': [848, 572, 42, 36]
             'GR:GR-1char': [848, 572, 42, 36]
             'GR:national-1char': [848, 572, 42, 36]
             'IT:SR-1char': [848, 572, 42, 36]
@@ -1626,7 +1626,7 @@ textures:
             'UA:M-1char': [848, 572, 42, 36]
             'UA:P-1char': [848, 572, 42, 36]
             'ru:national-2char': [794, 572, 48, 36]
-            'UK:M-2char': [794, 572, 48, 36]
+            'GB-2char': [794, 572, 48, 36]
             'GR:GR-2char': [794, 572, 48, 36]
             'GR:national-2char': [794, 572, 48, 36]
             'IT:SR-2char': [794, 572, 48, 36]
@@ -1642,7 +1642,7 @@ textures:
             'UA:M-2char': [794, 572, 48, 36]
             'UA:P-2char': [794, 572, 48, 36]
             'ru:national-3char': [734, 572, 54, 36]
-            'UK:M-3char': [734, 572, 54, 36]
+            'GB-3char': [734, 572, 54, 36]
             'GR:GR-3char': [734, 572, 54, 36]
             'GR:national-3char': [734, 572, 54, 36]
             'IT:SR-3char': [734, 572, 54, 36]
@@ -1658,7 +1658,7 @@ textures:
             'UA:M-3char': [734, 572, 54, 36]
             'UA:P-3char': [734, 572, 54, 36]
             'ru:national-4char': [668, 572, 60, 36]
-            'UK:M-4char': [668, 572, 60, 36]
+            'GB-4char': [668, 572, 60, 36]
             'GR:GR-4char': [668, 572, 60, 36]
             'GR:national-4char': [668, 572, 60, 36]
             'IT:SR-4char': [668, 572, 60, 36]
@@ -1674,7 +1674,7 @@ textures:
             'UA:M-4char': [668, 572, 60, 36]
             'UA:P-4char': [668, 572, 60, 36]
             'ru:national-5char': [596, 572, 66, 36]
-            'UK:M-5char': [596, 572, 66, 36]
+            'GB-5char': [596, 572, 66, 36]
             'GR:GR-5char': [596, 572, 66, 36]
             'GR:national-5char': [596, 572, 66, 36]
             'IT:SR-5char': [596, 572, 66, 36]
