--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1045,7 +1045,7 @@ textures:
             'A-1char': [860, 934, 42, 36]
             'M-1char': [860, 934, 42, 36]
             'e-road-1char': [860, 934, 42, 36]
-            'UK:A-1char': [860, 934, 42, 36]
+            'GB:A-1char': [860, 934, 42, 36]
             'ES:AA2-1char': [860, 934, 42, 36]
             'BD:NH-1char': [860, 934, 42, 36]
             'IT:RA-1char': [860, 934, 42, 36]
@@ -1058,7 +1058,7 @@ textures:
             'A-2char': [806, 934, 46, 36]
             'M-2char': [806, 934, 46, 36]
             'e-road-2char': [806, 934, 46, 36]
-            'UK:A-2char': [806, 934, 46, 36]
+            'GB:A-2char': [806, 934, 46, 36]
             'ES:AA2-2char': [806, 934, 46, 36]
             'BD:NH-2char': [806, 934, 46, 36]
             'IT:RA-2char': [806, 934, 46, 36]
@@ -1071,7 +1071,7 @@ textures:
             'A-3char': [748, 934, 52, 36]
             'M-3char': [748, 934, 52, 36]
             'e-road-3char': [748, 934, 52, 36]
-            'UK:A-3char': [748, 934, 52, 36]
+            'GB:A-3char': [748, 934, 52, 36]
             'ES:AA2-3char': [748, 934, 52, 36]
             'BD:NH-3char': [748, 934, 52, 36]
             'IT:RA-3char': [748, 934, 52, 36]
@@ -1084,7 +1084,7 @@ textures:
             'A-4char': [682, 934, 58, 36]
             'M-4char': [682, 934, 58, 36]
             'e-road-4char': [682, 934, 58, 36]
-            'UK:A-4char': [682, 934, 58, 36]
+            'GB:A-4char': [682, 934, 58, 36]
             'ES:AA2-4char': [682, 934, 58, 36]
             'BD:NH-4char': [682, 934, 58, 36]
             'IT:RA-4char': [682, 934, 58, 36]
@@ -1097,7 +1097,7 @@ textures:
             'A-5char': [612, 934, 64, 36]
             'M-5char': [612, 934, 64, 36]
             'e-road-5char': [612, 934, 64, 36]
-            'UK:A-5char': [612, 934, 64, 36]
+            'GB:A-5char': [612, 934, 64, 36]
             'ES:AA2-5char': [612, 934, 64, 36]
             'BD:NH-5char': [612, 934, 64, 36]
             'IT:RA-5char': [612, 934, 64, 36]
@@ -1444,16 +1444,21 @@ textures:
             'ID:ID-3char': [520, 466, 54, 44]
             'ID:ID-4char': [456, 466, 58, 44]
             'ID:ID-5char': [384, 466, 66, 44]
-            'IN:IN-1char': [156, 518, 36, 48]
-            'IN:IN-2char': [112, 518, 36, 48]
-            'IN:IN-3char': [60, 518, 48, 48]
-            'IN:IN-4char': [0, 518, 54, 48]
-            'IN:IN-5char': [956, 466, 62, 48]
+            'IN:NH-1char': [156, 518, 36, 48]
+            'IN:NH-2char': [112, 518, 36, 48]
+            'IN:NH-3char': [60, 518, 48, 48]
+            'IN:NH-4char': [0, 518, 54, 48]
+            'IN:NH-5char': [956, 466, 62, 48]
             'IN:SH-1char': [916, 466, 36, 48]
+            'IN:MH-1char': [916, 466, 36, 48]
             'IN:SH-2char': [872, 466, 36, 48]
+            'IN:MH-2char': [872, 466, 36, 48]
             'IN:SH-3char': [820, 466, 48, 48]
+            'IN:MH-3char': [820, 466, 48, 48]
             'IN:SH-4char': [760, 466, 54, 48]
+            'IN:MH-4char': [760, 466, 54, 48]
             'IN:SH-5char': [692, 466, 62, 48]
+            'IN:MH-5char': [692, 466, 62, 48]
             'IT:AS-1char': [338, 466, 36, 44]
             'IT:AS-2char': [288, 466, 44, 44]
             'IT:AS-3char': [234, 468, 48, 42]
