--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1464,6 +1464,11 @@ textures:
             'IT:AS-3char': [234, 468, 48, 42]
             'IT:AS-4char': [172, 466, 54, 44]
             'IT:AS-5char': [102, 466, 62, 44]
+            'IT:A-road-1char': [338, 466, 36, 44]
+            'IT:A-road-2char': [288, 466, 44, 44]
+            'IT:A-road-3char': [234, 468, 48, 42]
+            'IT:A-road-4char': [172, 466, 54, 44]
+            'IT:A-road-5char': [102, 466, 62, 44]
             'JP:EX-1char': [50, 680, 40, 46]
             'JP:EX-2char': [0, 680, 44, 44]
             'JP:EX-3char': [950, 626, 46, 46]
@@ -1620,6 +1625,7 @@ textures:
             'GR:national-1char': [848, 572, 42, 36]
             'IT:SR-1char': [848, 572, 42, 36]
             'IT:SS-1char': [848, 572, 42, 36]
+            'IT:B-road-1char': [848, 572, 42, 36]
             'IT:SP-1char': [848, 572, 42, 36]
             'ES:A-1char': [848, 572, 42, 36]
             'SE:A-1char': [848, 572, 42, 36]
@@ -1636,6 +1642,7 @@ textures:
             'GR:national-2char': [794, 572, 48, 36]
             'IT:SR-2char': [794, 572, 48, 36]
             'IT:SS-2char': [794, 572, 48, 36]
+            'IT:B-road-2char': [794, 572, 48, 36]
             'IT:SP-2char': [794, 572, 48, 36]
             'ES:A-2char': [794, 572, 48, 36]
             'SE:A-2char': [794, 572, 48, 36]
@@ -1668,6 +1675,7 @@ textures:
             'GR:national-4char': [668, 572, 60, 36]
             'IT:SR-4char': [668, 572, 60, 36]
             'IT:SS-4char': [668, 572, 60, 36]
+            'IT:B-road-4char': [668, 572, 60, 36]
             'IT:SP-4char': [668, 572, 60, 36]
             'ES:A-4char': [668, 572, 60, 36]
             'SE:A-4char': [668, 572, 60, 36]
@@ -1684,6 +1692,7 @@ textures:
             'GR:national-5char': [596, 572, 66, 36]
             'IT:SR-5char': [596, 572, 66, 36]
             'IT:SS-5char': [596, 572, 66, 36]
+            'IT:B-road-5char': [596, 572, 66, 36]
             'IT:SP-5char': [596, 572, 66, 36]
             'ES:A-5char': [596, 572, 66, 36]
             'SE:A-5char': [596, 572, 66, 36]
