--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1252,7 +1252,7 @@ textures:
             'CN-roads-1char': [940, 732, 42, 36]
             'FR:A-road-1char': [940, 732, 42, 36]
             'FR:N-road-1char': [940, 732, 42, 36]
-            'PL:NR-1char': [940, 732, 42, 36]
+            'pl:national-1char': [940, 732, 42, 36]
             'PT:IP-1char': [940, 732, 42, 36]
             'NL:A-1char': [940, 732, 42, 36]
             'ES:C-1char': [940, 732, 42, 36]
@@ -1261,7 +1261,7 @@ textures:
             'CN-roads-2char': [886, 732, 46, 36]
             'FR:A-road-2char': [886, 732, 46, 36]
             'FR:N-road-2char': [886, 732, 46, 36]
-            'PL:NR-2char': [886, 732, 46, 36]
+            'pl:national-2char': [886, 732, 46, 36]
             'PT:IP-2char': [886, 732, 46, 36]
             'NL:A-2char': [886, 732, 46, 36]
             'ES:C-2char': [886, 732, 46, 36]
@@ -1270,7 +1270,7 @@ textures:
             'CN-roads-3char': [828, 732, 52, 36]
             'FR:A-road-3char': [828, 732, 52, 36]
             'FR:N-road-3char': [828, 732, 52, 36]
-            'PL:NR-3char': [828, 732, 52, 36]
+            'pl:national-3char': [828, 732, 52, 36]
             'PT:IP-3char': [828, 732, 52, 36]
             'NL:A-3char': [828, 732, 52, 36]
             'ES:C-3char': [828, 732, 52, 36]
@@ -1279,7 +1279,7 @@ textures:
             'CN-roads-4char': [762, 732, 58, 36]
             'FR:A-road-4char': [762, 732, 58, 36]
             'FR:N-road-4char': [762, 732, 58, 36]
-            'PL:NR-4char': [762, 732, 58, 36]
+            'pl:national-4char': [762, 732, 58, 36]
             'PT:IP-4char': [762, 732, 58, 36]
             'NL:A-4char': [762, 732, 58, 36]
             'ES:C-4char': [762, 732, 58, 36]
@@ -1288,7 +1288,7 @@ textures:
             'CN-roads-5char': [692, 732, 64, 36]
             'FR:A-road-5char': [692, 732, 64, 36]
             'FR:N-road-5char': [692, 732, 64, 36]
-            'PL:NR-5char': [692, 732, 64, 36]
+            'pl:national-5char': [692, 732, 64, 36]
             'PT:IP-5char': [692, 732, 64, 36]
             'NL:A-5char': [692, 732, 64, 36]
             'ES:C-5char': [692, 732, 64, 36]
@@ -1310,35 +1310,35 @@ textures:
             'DE:A-5char': [394, 680, 64, 36]
             'BAB-5char': [394, 680, 64, 36]
             'DE:DE-1char': [762, 518, 42, 36]
-            'PL:VR-1char': [762, 518, 42, 36]
+            'pl:regional-1char': [762, 518, 42, 36]
             'dk:national-1char': [762, 518, 42, 36]
             'VN:I-1char': [762, 518, 42, 36]
             'SK:LR-1char': [762, 518, 42, 36]
             'FI:FS-1char': [762, 518, 42, 36]
             'UA:P2-1char': [762, 518, 42, 36]
             'DE:DE-2char': [710, 518, 46, 36]
-            'PL:VR-2char': [710, 518, 46, 36]
+            'pl:regional-2char': [710, 518, 46, 36]
             'dk:national-2char': [710, 518, 46, 36]
             'VN:I-2char': [710, 518, 46, 36]
             'SK:LR-2char': [710, 518, 46, 36]
             'FI:FS-2char': [710, 518, 46, 36]
             'UA:P2-2char': [710, 518, 46, 36]
             'DE:DE-3char': [650, 518, 52, 36]
-            'PL:VR-3char': [650, 518, 52, 36]
+            'pl:regional-3char': [650, 518, 52, 36]
             'dk:national-3char': [650, 518, 52, 36]
             'VN:I-3char': [650, 518, 52, 36]
             'SK:LR-3char': [650, 518, 52, 36]
             'FI:FS-3char': [650, 518, 52, 36]
             'UA:P2-3char': [650, 518, 52, 36]
             'DE:DE-4char': [586, 518, 58, 36]
-            'PL:VR-4char': [586, 518, 58, 36]
+            'pl:regional-4char': [586, 518, 58, 36]
             'dk:national-4char': [586, 518, 58, 36]
             'VN:I-4char': [586, 518, 58, 36]
             'SK:LR-4char': [586, 518, 58, 36]
             'FI:FS-4char': [586, 518, 58, 36]
             'UA:P2-4char': [586, 518, 58, 36]
             'DE:DE-5char': [514, 518, 64, 36]
-            'PL:VR-5char': [514, 518, 64, 36]
+            'pl:regional-5char': [514, 518, 64, 36]
             'dk:national-5char': [514, 518, 64, 36]
             'VN:I-5char': [514, 518, 64, 36]
             'SK:LR-5char': [514, 518, 64, 36]
@@ -1459,11 +1459,6 @@ textures:
             'IN:MH-4char': [760, 466, 54, 48]
             'IN:SH-5char': [692, 466, 62, 48]
             'IN:MH-5char': [692, 466, 62, 48]
-            'IT:AS-1char': [338, 466, 36, 44]
-            'IT:AS-2char': [288, 466, 44, 44]
-            'IT:AS-3char': [234, 468, 48, 42]
-            'IT:AS-4char': [172, 466, 54, 44]
-            'IT:AS-5char': [102, 466, 62, 44]
             'IT:A-road-1char': [338, 466, 36, 44]
             'IT:A-road-2char': [288, 466, 44, 44]
             'IT:A-road-3char': [234, 468, 48, 42]
@@ -1626,7 +1621,6 @@ textures:
             'IT:SR-1char': [848, 572, 42, 36]
             'IT:SS-1char': [848, 572, 42, 36]
             'IT:B-road-1char': [848, 572, 42, 36]
-            'IT:SP-1char': [848, 572, 42, 36]
             'ES:A-1char': [848, 572, 42, 36]
             'SE:A-1char': [848, 572, 42, 36]
             'AT:A-1char': [848, 572, 42, 36]
@@ -1643,7 +1637,6 @@ textures:
             'IT:SR-2char': [794, 572, 48, 36]
             'IT:SS-2char': [794, 572, 48, 36]
             'IT:B-road-2char': [794, 572, 48, 36]
-            'IT:SP-2char': [794, 572, 48, 36]
             'ES:A-2char': [794, 572, 48, 36]
             'SE:A-2char': [794, 572, 48, 36]
             'AT:A-2char': [794, 572, 48, 36]
@@ -1659,7 +1652,7 @@ textures:
             'GR:national-3char': [734, 572, 54, 36]
             'IT:SR-3char': [734, 572, 54, 36]
             'IT:SS-3char': [734, 572, 54, 36]
-            'IT:SP-3char': [734, 572, 54, 36]
+            'IT:B-road-3char': [734, 572, 54, 36]
             'ES:A-3char': [734, 572, 54, 36]
             'SE:A-3char': [734, 572, 54, 36]
             'AT:A-3char': [734, 572, 54, 36]
@@ -1676,7 +1669,6 @@ textures:
             'IT:SR-4char': [668, 572, 60, 36]
             'IT:SS-4char': [668, 572, 60, 36]
             'IT:B-road-4char': [668, 572, 60, 36]
-            'IT:SP-4char': [668, 572, 60, 36]
             'ES:A-4char': [668, 572, 60, 36]
             'SE:A-4char': [668, 572, 60, 36]
             'AT:A-4char': [668, 572, 60, 36]
@@ -1693,7 +1685,6 @@ textures:
             'IT:SR-5char': [596, 572, 66, 36]
             'IT:SS-5char': [596, 572, 66, 36]
             'IT:B-road-5char': [596, 572, 66, 36]
-            'IT:SP-5char': [596, 572, 66, 36]
             'ES:A-5char': [596, 572, 66, 36]
             'SE:A-5char': [596, 572, 66, 36]
             'AT:A-5char': [596, 572, 66, 36]
